[tool.poetry]
name = "python-notion-api"
version = "0.1.0"
description = "Python wrapper for the official Notion API"
authors = [
    "Mihails <mihails.delmans@colorifix.com>",
	"Paula Fernandez <paula@friends.colorifix.com>",
    "Michael Hall <michael.hall@colorifix.com>",
    "Helena Saunders <helena.saunders@colorifix.com>"
]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "*"
requests = "^2.28.1"
pydantic = "^1.10.2"
slugify = "^0.0.1"
PyDrive2 = "^1.15.0"
pandas = "*"
openpyxl = "^3.0.10"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
