[tool.poetry]
name = "python-notion-api"
version = "0.9.0"
description = "Python wrapper for the official Notion API"
authors = [
    "Mihails <mihails.delmans@colorifix.com>",
	"Paula Fernandez <paula@friends.colorifix.com>",
    "Michael Hall <michael.hall@colorifix.com>",
    "Helena Saunders <helena.saunders@colorifix.com>",
    "Rodolfo Marques <rodolfo.marques@colorifix.com>"
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
pydantic = "^2"
slugify = "^0.0.1"
PyDrive2 = "^1.15.0"
openpyxl = "^3.0.10"
matplotlib = "^3.5.2"
pandas = "^2.0.2"
loguru = "^0.7.0"
aiohttp = "^3.8.5"
aiolimiter = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
pytest-asyncio = "^0.21.1"
pytest = "^7.4.3"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=79
extend-select = ["I"]
